--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  #Navigation
+  auto_route:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner:
+  auto_route_generator:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
