--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  #Dependency Injections
+  get_it:
+  injectable:
   #Navigation
   auto_route:
 
@@ -37,6 +40,7 @@ dev_dependencies:
 
   build_runner:
   auto_route_generator:
+  injectable_generator:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
