--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  #Diolog Snackbar Navigation
+  stacked_services:
   #Dependency Injections
   get_it:
   injectable:
@@ -37,7 +39,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   build_runner:
   auto_route_generator:
   injectable_generator:
